scrollbar fix try and slide title edit

--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,10 @@ body{
 	font-size:15px;
 }
 
+::-webkit-scrollbar{
+	display: none;
+}
+
 h1,h2,h3,h4,h5,h6{
     font-family: 'MaruBuri', serif;
 }
@@ -29,14 +33,8 @@ h4 a:hover, h5 a:hover, h6 a:hover{
 	color:#f0394d;
 }
 
-h1, .h1{
-	margin-top: 10px;
-	margin-bottom: 30px;
-	/*margin-top: 25px*/
-}
-
-h2, h3,
-.h2, .h3{
+h1, h2, h3,
+.h1, .h2, .h3{
 	 margin-top: 20px;
   margin-bottom: 20px;
 }
@@ -1778,6 +1776,12 @@ a:hover .de-icon.effect3{
 	font-weight: 400; 
 	font-size: 27px; 
 	color: #fff9ed;
+	
+}
+
+.slide-title h1{
+	margin-top: 15px;
+	margin-bottom: 20px;
 }
 
 #banner-date{
@@ -3053,13 +3057,10 @@ button.mfp-close, button.mfp-arrow {
 /*===============================================*/
 /* Text Size									 */
 /*===============================================*/
-h1, .h1{
-	margin-top: 8px;
-	margin-bottom: 23px;
-}
 
-h2, h3,
-.h2, .h3{
+
+h1, h2, h3,
+.h1, .h2, .h3{
 	 margin-top: 20px;
   margin-bottom: 20px;
 }
@@ -3107,6 +3108,11 @@ p{
 
 #invited{
 	font-size: 24px;
+}
+
+.slide-title h1{
+	margin-top: 8px;
+	margin-bottom: 12px;
 }
 
 #banner-date{
@@ -3328,13 +3334,8 @@ p{
 	line-height:24px;
 }*/
 
-h1, .h1{
-	margin-top: 6px;
-	margin-bottom: 20px;
-}
-
-h2, h3,
-.h2, .h3{
+h1, h2, h3,
+.h1, .h2, .h3{
 	 margin-top: 17px;
   margin-bottom: 17px;
 }
@@ -3836,13 +3837,9 @@ a.link-btn{
 /*===============================================*/
 /* 01. GENERAL			 						 */
 /*===============================================*/
-h1, .h1{
-	margin-top: 4px;
-	margin-bottom: 18px;
-}
 
-h2, h3,
-.h2, .h3{
+h1, h2, h3,
+.h1, .h2, .h3{
 	 margin-top: 16px;
   margin-bottom: 16px;
 }
